# laminar

./: .gitignore  .mise.toml  .oxfmtrc.json  Cargo.toml  README.md  justfile
.sqlx/: query-582d8e9d91ca83a981235e720e261e43bac7fa50387e712793c7b6c6c9474cf4.json  query-7daa4a8e68c020d347f01e155506114b923b71e4e7bc000f14fdeb0d97a800bf.json  query-84a9affc4476afdae71f3248955b86e672161e5da77414cee683510c1bb94a6b.json  query-e03ce01213402d8c9abea45acc1e98dba7ba53b964d0052ed9fc493b633404e9.json  query-eeeb4850c7cd2cda183782adfc618cea9418964470a17e01e6e547c864235746.json  query-fbf2039fa74084b4af56e352f2c0567118a9410aeb7306523aad3645897cec86.json
.zed/: settings.json
app/: AGENTS.md  README.md  SCRATCH.md  justfile  package.json  tsconfig.json  vite.config.ts
app/.storybook/: main.ts
app/fixtures/: detail.ts  markers.ts  sample.ts  status.ts
app/fixtures/playground/: count.ts
app/fixtures/tests/fixtures/: count.ts  wrapper.ts
app/fixtures/tests/records/: marker.ts  table.ts
app/src/: address.tsx  app.tsx  atom.tsx  db.tsx  error-boundary.tsx  index.css  main.tsx  native.tsx  records.tsx  routes.ts  status.tsx  stream.tsx  tests.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/migrations/: 20260202142422_init.sql
app/src-tauri/src/: config.rs  db.rs  debounce.rs  lib.rs  main.rs  record.rs  retention.rs  series.rs  stream.rs
app/src/components/: ansi-text.tsx  level-badge.tsx  message.tsx  source.tsx
app/src/components/ui/: animated-theme-toggler.tsx  button.stories.tsx  checkbox.tsx  command.stories.tsx  command.tsx  data-table.tsx  dialog.stories.tsx  field.tsx  input.tsx  label.tsx  popover.stories.tsx  radio-group.tsx  scroll-area.tsx  select.tsx  separator.tsx  sheet.tsx  slider.tsx  sonner.tsx  table.tsx  tabs.stories.tsx
app/src/dev/: debug.tsx  fixtures.export.test.tsx  fixtures.test.tsx  fixtures.tsx
app/src/dev/fixtures/: runtime.tsx
app/src/lib/: utils.ts
app/src/playground/: atoms.tsx  data.json  design.tsx  overflow.tsx
app/src/records/: data.test.tsx  data.tsx  detail.tsx  filter-cell.tsx  filters.tsx  marker.tsx  records.test.tsx  schema.tsx  table.test-helpers.tsx  table.test.tsx  table.tsx  table.updates.test.tsx
app/src/records/data/: filter.ts  rows.ts
app/src/records/detail/: panels.tsx
app/src/status/: data.tsx  recent_sessions.sql
app/src/types/: db.d.ts  react-syntax-highlighter.d.ts
cli/: Cargo.toml  README.md  SCRATCH.md
cli/src/: loadgen.rs  main.rs  sink.rs  source.rs  source_macos.rs  tap.rs
cli/src/tap/: parser.rs
core/: Cargo.toml  README.md
core/src/: api.rs  config.rs  lib.rs  reader.rs  sink.rs
core/src/api/: record.rs
core/src/config/: keys.rs
core/src/sink/: driver.rs  session.rs
sink/: .gitattributes  .oxfmtrc.json  .oxlintrc.json  .rustfmt.toml  AGENTS.md  README.md  SCRATCH.md  components.json  index.html  justfile  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
sink/.storybook/: main.ts  preview.ts
sink/.zed/: settings.json
sink/fixtures/: one.ts  sample.ts  two.ts
sink/fixtures/playground/: count.ts
sink/fixtures/tests/fixtures/: count.ts  wrapper.ts
sink/fixtures/tests/records/: table.ts
sink/src/: App.css  App.tsx  ErrorBoundary.tsx  address.tsx  app.tsx  atom.tsx  config.ts  db.tsx  dev.tsx  events.tsx  index.css  log.ts  main.tsx  mock.ts  native.test.tsx  native.tsx  records.tsx  settings.tsx  state.ts  status.tsx  stream.tsx  tests.tsx  utils.ts  writer.tsx
sink/src-tauri/: Cargo.toml  tauri.conf.json
sink/src-tauri/migrations/: 20260202142422_init.sql
sink/src-tauri/src/: config.rs  error.rs  lib.rs  record.rs  series.rs  stream.rs  throttle.rs
sink/src/components/: level-badge.tsx  motion-count.tsx  timestamp.tsx
sink/src/components/ui/: animated-theme-toggler.tsx  badge.tsx  button.stories.tsx  button.tsx  command.stories.tsx  command.tsx  data-table.tsx  dialog.stories.tsx  dialog.tsx  field.stories.tsx  input.stores.tsx  label.stories.tsx  popover.stories.tsx  popover.tsx  scroll-area.tsx  select.stories.tsx  sheet.stories.tsx  sheet.tsx  switch.tsx  table.stories.tsx  table.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
sink/src/connection/: by_name.sql  data.tsx  status.tsx
sink/src/db/: updates.tsx
sink/src/dev/: fixtures.tsx  mock.ts
sink/src/dev/fixtures/: runtime.tsx
sink/src/lib/: utils.ts
sink/src/playground/: atoms.tsx  design.tsx  layout.tsx  sample-table.tsx  utils.ts
sink/src/records/: controls.tsx  data.tsx  detail.tsx  fields.tsx  filter-cell.tsx  filters.tsx  infinite-scroll.tsx  row-count.tsx  schema.tsx  table.test.tsx  table.tsx  table.updates.test.tsx
sink/src/records/data/: filter.ts  rows.ts
sink/src/records/detail/: panels.tsx  tabs.tsx
sink/src/status/: data.tsx  recent_sessions.sql
sink/src/types/: db.d.ts
stream/: .oxfmtrc.json  Cargo.toml  README.md  SCRATCH.md
stream/cli/: loadgen.rs  main.rs  sink.rs  source.rs  source_macos.rs  tap.rs
stream/cli/tap/: parser.rs
stream/loadgen/: main.rs
stream/src/: api.rs  config.rs  lib.rs  reader.rs  sink.rs
stream/src/sink/: driver.rs  session.rs
testing/: Cargo.toml  README.md
testing/src/: lib.rs
