[workspace]
members = ["core", "app/src-tauri", "testing", "cli"]
resolver = "3"

[workspace.package]
version = "0.0.0-UNSTABLE"
authors = ["Thomas Rampelberg <thomas@saunter.org>"]
keywords = []
categories = []
license = "Apache-2.0"
repository = "https://github.com/grampelberg/laminar"
edition = "2024"

[workspace.lints.rust]
rust-2024-compatibility = "warn"
keyword-idents = "warn"
let-underscore = "warn"
unused-crate-dependencies = "warn"
unused-imports = "warn"
unused-must-use = "warn"
unreachable-pub = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
unsafe-op-in-unsafe-fn = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = "warn"
nursery = "warn"
cargo = "warn"

missing_panics_doc = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
