[package]
name = "laminar-cli"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive", "env"] }
color-eyre = { version = "0.6.5", features = ["track-caller"] }
eyre = "0.6.12"
futures = "0.3.32"
laminar-stream = { path = "../core" }
libproc = "0.14.11"
petname = "2.0.2"
rand = "0.10.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[lints]
workspace = true
