[package]
name = "laminar-stream"
description = "Core streaming and sink primitives for Laminar."
readme = "README.md"
version.workspace = true
authors.workspace = true
keywords = ["tracing", "logging", "streaming"]
categories = ["development-tools::debugging", "network-programming"]
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
eyre = "0.6.12"
tokio = { version = "1.49.0", features = ["macros", "rt", "test-util", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json",
  "registry",
] }
serde_json = "1.0.149"
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.0"
strum = { version = "0.27.2", features = ["derive"] }
hostname = "0.4.2"
valuable = { version = "0.1.1", optional = true }
bon = { version = "3.8.2", features = ["implied-bounds"] }
metrics = "0.24.3"
iroh = { version = "0.96.0", features = ["address-lookup-mdns"] }
rand = "0.9.2"
futures = "0.3.31"
figment = { version = "0.10.19", features = ["toml", "env"] }
shellexpand = "3.1.1"
data-encoding = "2.10.0"
thiserror = "2.0.18"
n0-error = "0.1.3"
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = ["v4", "rng-rand"] }
scopeguard = "1.2.0"
libproc = "0.14.11"

[dev-dependencies]
blackbox-metrics = "0.0.1"
color-eyre = { version = "0.6.5", features = ["track-caller"] }
laminar-testing = { path = "../testing" }

[features]
valuable = ["tracing/valuable", "dep:valuable"]
test_pretty = []

[lints]
workspace = true
