[package]
name = "laminar-stream"
description = "Core streaming and sink primitives for Laminar."
readme = "README.md"
version.workspace = true
authors.workspace = true
keywords = ["tracing", "logging", "streaming"]
categories = ["development-tools::debugging", "network-programming"]
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
bon = { version = "3.9.0", features = ["implied-bounds"] }
data-encoding = "2.10.0"
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.32"
hostname = "0.4.2"
iroh = { version = "0.96.1", features = ["address-lookup-mdns"] }
libproc = "0.14.11"
metrics = "0.24.3"
n0-error = "0.1.3"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.10.0"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.17.0"
shellexpand = "3.1.2"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt", "test-util", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json",
  "registry",
] }
uuid = { version = "1.21.0", features = ["v4", "rng-rand"] }
valuable = { version = "0.1.1", optional = true }

[dev-dependencies]
blackbox-metrics = "0.0.1"
color-eyre = { version = "0.6.5", features = ["track-caller"] }
laminar-testing = { path = "../testing" }

[features]
valuable = ["tracing/valuable", "dep:valuable"]
test_pretty = []

[lints]
workspace = true
