[package]
name = "inspector"
version.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "4.5.56", features = ["derive", "env"] }
eyre = "0.6.12"
tokio = { version = "1.49.0", features = ["macros", "rt", "test-util", "time"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "json",
  "registry",
] }
serde_json = "1.0.149"
postcard = { version = "1.1.3", features = ["alloc"] }
hashbrown = "0.16.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.15.0"
strum = { version = "0.27.2", features = ["derive"] }
hostname = "0.4.2"
valuable = { version = "0.1.1", optional = true }
bon = { version = "3.8.2", features = ["implied-bounds"] }
color-eyre = { version = "0.6.5", features = ["track-caller"] }
metrics = "0.24.3"
iroh = { version = "0.96.0", features = ["address-lookup-mdns"] }
rand = "0.9.2"
petname = "2.0.2"
futures = "0.3.31"
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
figment = { version = "0.10.19", features = ["toml", "env"] }
shellexpand = "3.1.1"
test-util = { version = "0.0.0-UNSTABLE", path = "../test-util" }
data-encoding = "2.10.0"
thiserror = "2.0.18"
rstest = "0.26.1"
tokio-util = "0.7.18"
n0-error = "0.1.3"
async-trait = "0.1.89"
uuid = { version = "1.20.0", features = ["v4", "rng-rand"] }
scopeguard = "1.2.0"
libproc = "0.14.11"
chrono = "0.4.43"

[[bin]]
name = "cli"
path = "cli/main.rs"

[features]
valuable = ["tracing/valuable", "dep:valuable"]
test_pretty = []

[lints]
workspace = true
