[package]
name = "laminar-sink"
description = "log viewer"
readme = "../README.md"
version.workspace = true
authors.workspace = true
keywords = ["tauri", "logging", "tracing"]
categories = ["development-tools::debugging", "gui"]
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
name = "laminar_sink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
blackbox-metrics = "0.0.1"
bon = { version = "3.9.0", features = ["implied-bounds"] }
chrono = { version = "0.4.44", features = ["serde"] }
color-eyre = { version = "0.6.5", features = ["track-caller"] }
eyre = "0.6.12"
figment = { version = "0.10.19", features = ["toml"] }
futures = "0.3.32"
iroh = "0.96.1"
laminar-stream = { path = "../../core" }
metrics = "0.24.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.17.0"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "derive",
  "json",
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
  "sqlite-preupdate-hook",
] }
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["time"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "registry",
] }

[features]
clean = []
