[package]
name = "inspector-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "inspector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.49.0", features = ["time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
  "registry",
] }
color-eyre = { version = "0.6.5", features = ["track-caller"] }
inspector = { path = "../../bloop/inspector" }
futures = "0.3.31"
eyre = "0.6.12"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8.6", features = [
  "chrono",
  "derive",
  "json",
  "macros",
  "migrate",
  "runtime-tokio",
  "sqlite",
  "sqlite-preupdate-hook",
] }
bon = { version = "3.8.2", features = ["implied-bounds"] }
iroh = "0.96.1"
figment = { version = "0.10.19", features = ["toml"] }
toml = "0.8.19"
serde_with = "3.14.1"
thiserror = "2.0.18"
chrono = { version = "0.4.43", features = ["serde"] }

[features]
clean = []
